tests/ui/std/mem/transmute/invalid_value.stderr
error: it is unsound to transmute a type to a boolean
  --> tests/ui/std/mem/transmute/invalid_value.rs:6:36
   |
LL |     unsafe { transmute::<u8, bool>(x) }
   |              ----------------------^-
   |              |                     |
   |              |                     transmuted from here
   |              transmuted to here
   |
   = note: `#[deny(rpl::unsound_transmute_to_bool)]` on by default

error: aborting due to 1 previous error

